--- a/Publisher/src/Publisher.mxml
+++ b/Publisher/src/Publisher.mxml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" 
+<mx:Application xmlns:mx="http://www.adobe.com/2006/mxml"
 				xmlns:csxs="com.adobe.csxs.core.*"
 				width="100%" height="100%" minWidth="250" minHeight="240"
-				applicationComplete="onApplicationComplete()"
-				backgroundColor="0x000000"
-				historyManagementEnabled="false"
-				horizontalScrollPolicy="off" layout="{ContainerLayout.ABSOLUTE}"
-				usePreloader="false"
-				>
+				applicationComplete="onApplicationComplete()" backgroundColor="0x000000"
+				historyManagementEnabled="false" horizontalScrollPolicy="off"
+				layout="{ContainerLayout.ABSOLUTE}" usePreloader="false">
 	<mx:Script>
 		<![CDATA[
 			import com.adobe.csawlib.illustrator.Illustrator;
@@ -19,6 +16,7 @@
 			
 			import managers.*;
 			import managers.IllustratorController;
+			import managers.data.PublishingItem;
 			
 			import mx.collections.ArrayCollection;
 			import mx.controls.ToolTip;
@@ -32,42 +30,30 @@
 			import mx.managers.ToolTipManager;
 			
 			[Bindable]
-			private var model:AppModel = null; 
-			private var controller:AppController = null;
+			private var model:AppModel = AppModel.getInstance(); 
+			private var controller:AppController
 			
 			private function onApplicationComplete():void{
 				controller = AppController.getInstance();
-				
-				model = AppModel.getInstance();
 				model.addEventListener("dataGridProviderChanged", dataGridProviderChangedHandler);
 				
 				ToolTipManager.showDelay = 1000;
 				ToolTipManager.hideDelay = 10000;
 				
 				styleDeclaration.setStyle("backgroundColor", "0xFFFFFF");
+				model.initialize();
 			}
 			
 			protected function dataGridProviderChangedHandler (event:Event):void {
 				gc.refresh();
 				grid.expandAll();
 			}
-						
-			protected function fileListDG_itemClickHandler(event:ListEvent):void
-			{
-//				saveButton.enabled = true; // todo: непонятно в каокй же момент кнопку делать активной
-				controller.changeArtboardToComposition(controller.getAssetCompositionByIndex(event.rowIndex));
-			}
 			
-			protected function fileListDG_itemDoubleClickHandler(event:ListEvent):void
-			{
-				controller.changeCompositionToIndex(event.rowIndex);
-//				saveButton.enabled = true;// todo: непонятно в каокй же момент кнопку делать активной
-			}
 			
 			protected function addNewAsset_clickHandler(event:MouseEvent):void
 			{
 				// TODO Auto-generated method stub
-				controller.newFile();
+				model.addNewDefaultFile();
 				controller.changeCompositionToLastCreated();
 			}
 						
@@ -82,11 +68,11 @@
 			
 			public function selectSaveDir(event:*):void {
 				try {
-				var f:File = new File();
-				f.browseForDirectory("Select directory to export your assets...");
-				f.addEventListener(Event.SELECT, function(event:Event):void {
-					model.defaultPathToPublish = f.nativePath;
-				});
+					var f:File = new File();
+					f.browseForDirectory("Select directory to export your assets...");
+					f.addEventListener(Event.SELECT, function(event:Event):void {
+						model.defaultPathToPublish = f.nativePath;
+					});
 				} catch (e:Error) {
 					trace('[Exception]' + e);					
 				}
@@ -103,25 +89,32 @@
 				publishingOperation.publish();
 			}
 			
+			protected function grid_itemClickHandler(event:ListEvent):void
+			{
+				if (event.itemRenderer.data is PublishingItem) 
+					controller.changeArtboardToComposition(event.itemRenderer.data.assetComposition);
+			}
+			
+			protected function grid_itemDoubleClickHandler(event:ListEvent):void
+			{
+				controller.changeCompositionToIndex(event.rowIndex);				
+			}
+			
 		]]>
 	</mx:Script>
 	
 	<mx:Style source="assets/css/style.css"/>
 
-	<mx:Box id="disabledView" width="100%" height="100%"
-			visible="{!model || model.state == AppModel.STATE_DISABLED}" 
-			includeInLayout="{this.visible}" 
-			horizontalCenter="0" 
+	<mx:Box id="disabledView" visible="{!model || model.state == AppModel.STATE_DISABLED}"
+			width="100%" height="100%" horizontalCenter="0" includeInLayout="{this.visible}"
 			verticalCenter="0">
 		<mx:VBox left="40" top="100">
 			<mx:Label text="Open document to start using Publisher"/>
 		</mx:VBox>
 	</mx:Box>
 	
-	<mx:Box id="welcomeView" width="100%" height="100%"
-			visible="{model &amp;&amp; (model.state == AppModel.STATE_WELCOME)}" 
-			includeInLayout="{this.visible}" 
-			horizontalCenter="0" 
+	<mx:Box id="welcomeView" visible="{model &amp;&amp; (model.state == AppModel.STATE_WELCOME)}"
+			width="100%" height="100%" horizontalCenter="0" includeInLayout="{this.visible}"
 			verticalCenter="0">
 		<mx:VBox left="40" top="100">
 			<mx:Label text="Welcome!"/>
@@ -132,60 +125,53 @@
 	
 
 	
-	<mx:VBox id="mainView" width="100%" height="100%"
-			visible="{model &amp;&amp; (model.state == AppModel.STATE_NORMAL)}" 
-			includeInLayout="{this.visible}">
+	<mx:VBox id="mainView" visible="{model &amp;&amp; (model.state == AppModel.STATE_NORMAL)}"
+			 width="100%" height="100%" includeInLayout="{this.visible}">
 		
-		<mx:ProgressBar id="exportProgress" 
-						width="100%" height="10" label="(%3%%) Published %1 files of %2" 
-						mode="event"
-						/>
+		<mx:ProgressBar id="exportProgress" width="100%" height="10"
+						label="(%3%%) Published %1 files of %2" mode="event"/>
 
 		
 		<mx:VBox width="100%" height="100%" verticalGap="3">
-			<mx:AdvancedDataGrid id="grid" 
-								 width="100%" height="100%"
-								 dragEnabled="true"
-								 dropEnabled="true"
-								 dragMoveEnabled="true"
-								 editable="true"
+			<mx:AdvancedDataGrid id="grid" width="100%" height="100%" dragEnabled="true"
+								 dragMoveEnabled="true" dropEnabled="true" editable="true"
+								 itemClick="grid_itemClickHandler(event)"
+								 itemDoubleClick="grid_itemDoubleClickHandler(event)"
 								 >
 				<mx:dataProvider>
-					<mx:GroupingCollection id="gc" source="{model.dataGridProvider}">
+					<mx:GroupingCollection id="gc" source="{model.dataProvider}">
 						<mx:grouping>
 							<mx:Grouping>
-								<mx:GroupingField name="pathToPublish" />
+								<mx:GroupingField name="pathToPublish"/>
 							</mx:Grouping>
 						</mx:grouping>
 					</mx:GroupingCollection>
 				</mx:dataProvider>
 				<mx:groupedColumns>   
-					<mx:AdvancedDataGridColumn id="screenNameColumn" headerText="SCREENS ASSETS" dataField="name" />
-					<mx:AdvancedDataGridColumn id="fileTypeColumn" editable="false" headerText="FILE TYPE" dataField="type" />
-					<mx:AdvancedDataGridColumn id="dimensionColumn" editable="false" headerText="DIMENSION" dataField="dimensionsString" />
+					<mx:AdvancedDataGridColumn id="screenNameColumn" dataField="name"
+											   headerText="SCREENS ASSETS" sortable="false" />
+					<mx:AdvancedDataGridColumn id="fileTypeColumn" dataField="type" editable="false"
+											   headerText="FILE TYPE" sortable="false" />
+					<mx:AdvancedDataGridColumn id="dimensionColumn" dataField="dimensionsString"
+											   editable="false" headerText="DIMENSION"
+											   sortable="false" />
 				</mx:groupedColumns>
 			</mx:AdvancedDataGrid>
 			
-				<mx:HRule width="100%" shadowColor="0xCCCCCC" strokeColor="0x999999"/>
-				
-				<mx:HBox width="100%">
-					<mx:Button label="..." click="selectSaveDir(event)"/>
-				</mx:HBox>		
-				
-				<mx:HRule width="100%" shadowColor="0xCCCCCC" strokeColor="0x999999"/>
 				
 				<mx:HBox width="100%" horizontalGap="2" paddingBottom="1">
-					<mx:Button width="80" height="16" label="Publish" click="publishButtonClick(event)"
-							   toolTip="Publish assets"/>
-					<mx:Spacer width="100%" />
+					<mx:Button width="80" height="16" label="Publish"
+							   click="publishButtonClick(event)" toolTip="Publish assets"/>
+
+					<mx:Spacer width="100%"/>
 					
-					<mx:Button id="addNewAssetButton" 
-						width="30" height="16" click="addNewAsset_clickHandler(event)"
+					<mx:Button id="addNewAssetButton" width="30" height="16"
+							   click="addNewAsset_clickHandler(event)"
 							   disabledSkin="@Embed(source='assets/icons/new_disabled.png')"
 							   downSkin="@Embed(source='assets/icons/new_down.png')"
-							   overSkin="@Embed(source='assets/icons/new_over.png')" toolTip="New File"
-							   upSkin="@Embed(source='assets/icons/new.png')"/>
-					<mx:Spacer width="12" />
+							   overSkin="@Embed(source='assets/icons/new_over.png')"
+							   toolTip="New File" upSkin="@Embed(source='assets/icons/new.png')"/>
+					<mx:Spacer width="12"/>
 				</mx:HBox>
 		</mx:VBox>
 	</mx:VBox>
