fixed order of new elementS

--- a/Publisher/src/Publisher.mxml
+++ b/Publisher/src/Publisher.mxml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<csxs:CSXSWindowedApplication 
+<mx:Application 
 	xmlns:mx="http://www.adobe.com/2006/mxml"
 	xmlns:csxs="com.adobe.csxs.core.*"
 	xmlns:utils="utils.*" 
 	xmlns:collections="mx.collections.*"
 	minWidth="250" minHeight="240"
-	applicationComplete="onApplicationComplete()" backgroundColor="0x000000"
+	applicationComplete="onApplicationComplete()" backgroundColor="0xffffff"
 	historyManagementEnabled="false"
-	layout="absolute" >
+	layout="absolute"
+	>
 	
 	<mx:Script>
 		<![CDATA[
 			import com.adobe.csawlib.illustrator.Illustrator;
+			import com.adobe.csxs.core.CSXSInterface;
 			import com.adobe.csxs.core.csxs_internal;
+			import com.adobe.csxs.events.StateChangeEvent;
+			import com.adobe.csxs.types.WindowGeometry;
 			import com.adobe.illustrator.*;
 			
 			import export.ExportOperation;
@@ -38,6 +42,7 @@
 			import mx.events.DataGridEvent;
 			import mx.events.FlexEvent;
 			import mx.events.ListEvent;
+			import mx.events.ResizeEvent;
 			import mx.managers.ToolTipManager;
 			
 			[Bindable]
@@ -53,6 +58,8 @@
 				
 				styleDeclaration.setStyle("backgroundColor", "0xFFFFFF");
 				model.initialize();
+				
+//				AutoTheme.sync();
 			}
 			
 			protected function dataGridProviderChangedHandler (event:Event):void {
@@ -142,10 +149,17 @@
 			
 			protected function removeSelectedAssetButton_clickHandler(event:MouseEvent):void
 			{
-				// TODO Auto-generated method stub
-				if (grid.selectedItem) {
-					if (grid.selectedItem is PublishingItem) {
-						model.deleteFileByIndex(grid.selectedItem as PublishingItem);
+				if (grid.selectedCells && grid.selectedCells.length > 0) {
+					for (var i:int = 0; i < grid.selectedCells.length; i++) {
+						const itemIndex:int = grid.selectedCells[i].rowIndex;
+						const dataObject:* = grid.indexToItemRenderer(itemIndex).data;
+						if (dataObject is PublishingItem) {
+							model.deleteFile(dataObject);	
+						} else {
+							for (var j:int = 0; j < dataObject.children.length; j++) {
+								model.deleteFile(dataObject.children[j] as PublishingItem);	
+							}
+						}		
 					}
 				}
 			}
@@ -182,6 +196,7 @@
 				return null;
 			}
 			
+		
 		]]>
 	</mx:Script>
 	
@@ -223,8 +238,12 @@
 		
 		<mx:VBox width="100%" height="100%" verticalGap="3">
 			
-			<mx:AdvancedDataGrid id="grid" width="100%" height="100%" dragEnabled="true"
-								 dragMoveEnabled="true" dropEnabled="true" editable="true"
+			<mx:AdvancedDataGrid id="grid" 
+								 width="100%" height="100%" 
+								 dragEnabled="true"
+								 dragMoveEnabled="true" 
+								 dropEnabled="true" 
+								 editable="true"
 								 itemClick="grid_itemClickHandler(event)"
 								 doubleClickEnabled="true" 
 								 itemDoubleClick="grid_itemDoubleClickHandler(event)"
@@ -232,6 +251,7 @@
 								 selectionMode="multipleRows"
 								 groupItemRenderer="views.GroupedItemRenderer"
 								 labelFunction="myLabelFunction"
+								 
 								 >
 				<mx:dataProvider>
 					<collections:MyGroupingCollection id="gc" source="{model.dataProvider}"
@@ -282,5 +302,5 @@
 				</mx:HBox>
 		</mx:VBox>
 	</mx:VBox>
-</csxs:CSXSWindowedApplication>
+</mx:Application>
 	
